# ARM_project

./: .gitignore  README.md  config.py  pyproject.toml  pytest.ini
arm_project/pages/api/: account_controller.py  authorization.py  project_controller.py
arm_project/pages/mobile/: authorization_page.py
arm_project/pages/ui/: admin_panel_all_user_page.py  admin_panel_project_page.py  authorization_page.py
arm_project/utils/: attach.py  factories.py  file.py  models.py
schemas/: schemas_authorization.py
tests/: conftest.py
tests/api/: test_account_controller.py  test_authorization_api.py  test_project_controller.py
tests/ui/: test_authorization_ui.py  test_create_project_ui.py
